releases/armi/v0.2.0/_sources/gallery/framework/run_reactorFacemap.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/framework/run_reactorFacemap.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_framework_run_reactorFacemap.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_framework_run_reactorFacemap.py:


Plot a reactor facemap
======================

Load a test reactor from the test suite and plot a dummy
power distribution from it. You can plot any block parameter.

.. GENERATED FROM PYTHON SOURCE LINES 21-41



.. image:: /gallery/framework/images/sphx_glr_run_reactorFacemap_001.png
    :alt: run reactorFacemap
    :class: sphx-glr-single-img





.. code-block:: default

    import logging

    from armi.reactor.tests import test_reactors
    from armi.utils import plotting
    from armi import configure, runLog

    # init ARMI logging tools
    logging.setLoggerClass(runLog.RunLogger)

    # configure ARMI
    configure(permissive=True)

    operator, reactor = test_reactors.loadTestReactor()
    reactor.core.growToFullCore(None)
    # set dummy power
    for b in reactor.core.getBlocks():
        x, y, z = b.spatialLocator.getGlobalCoordinates()
        b.p.pdens = x ** 2 + y ** 2 + z ** 2

    plotting.plotFaceMap(reactor.core, param="pdens", labelFmt="{0:.1e}")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  7.712 seconds)


.. _sphx_glr_download_gallery_framework_run_reactorFacemap.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: run_reactorFacemap.py <run_reactorFacemap.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: run_reactorFacemap.ipynb <run_reactorFacemap.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
