releases/armi/v0.2.4/_sources/gallery/framework/run_reactorFacemap.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/framework/run_reactorFacemap.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_framework_run_reactorFacemap.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_framework_run_reactorFacemap.py:


Plot a reactor facemap
======================

Load a test reactor from the test suite and plot a dummy
power distribution from it. You can plot any block parameter.

.. GENERATED FROM PYTHON SOURCE LINES 21-37




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    =========== Case Information ===========
    =========== Input File Information ===========
    =========== Reactor Cycle Information ===========
    =========== Constructing Reactor and Verifying Inputs ===========
    =========== Adding Assemblies to <Core: core id:140082438942192> ===========
    =========== Verifying Assembly Configurations ===========
    =========== Summarizing Source of Material Data for <Core: core id:140082438942192> ===========
    =========== Applying Geometry Modifications ===========
    =========== Initializing Mesh, Assembly Zones, and Nuclide Categories ===========
    =========== Adding Assemblies to <Core: sfp id:140082450267152> ===========
    =========== Summarizing Source of Material Data for <Core: sfp id:140082450267152> ===========
    =========== Applying Geometry Modifications ===========
    =========== Initializing Mesh, Assembly Zones, and Nuclide Categories ===========
    =========== Interface Stack Summary  ===========
    ===========  Triggering Init Event ===========
    =========== 01 - main                           Init            ===========
    =========== 02 - fissionProducts                Init            ===========
    =========== 03 - xsGroups                       Init            ===========
    =========== 04 - fuelHandler                    Init            ===========
    =========== 05 - history                        Init            ===========
    =========== 06 - database                       Init            ===========
    =========== 07 - memoryProfiler                 Init            ===========
    =========== 08 - snapshot                       Init            ===========
    ===========  Completed Init Event ===========






|

.. code-block:: default

    from armi.reactor.tests import test_reactors
    from armi.utils import plotting
    from armi import configure, runLog

    # configure ARMI
    configure(permissive=True)

    operator, reactor = test_reactors.loadTestReactor()
    reactor.core.growToFullCore(None)
    # set dummy power
    for b in reactor.core.getBlocks():
        x, y, z = b.spatialLocator.getGlobalCoordinates()
        b.p.pdens = x ** 2 + y ** 2 + z ** 2

    plotting.plotFaceMap(reactor.core, param="pdens", labelFmt="{0:.1e}")
    plotting.close()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  7.533 seconds)


.. _sphx_glr_download_gallery_framework_run_reactorFacemap.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: run_reactorFacemap.py <run_reactorFacemap.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: run_reactorFacemap.ipynb <run_reactorFacemap.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
